apps/manifests/helloworld/helloworld.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  hosts:
  - "*"
  gateways:
  - helloworld
  http:
  - match:
    - uri:
        prefix: /helloworld
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 8080
        host: helloworld
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: helloworld
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      serviceAccountName: helloworld
      containers:
        - name: helloworld
          image: bitnami/apache:latest
          volumeMounts:
            - name: helloworld
              mountPath: /app/
      volumes:
        - name: helloworld
          configMap:
            name: helloworld
